[package]
authors = ["Nathan Hawkins <utsl@utsl.org>"]
description = "Hybrid Logical Clocks"
homepage = "https://github.com/utsl42/hybrid-clocks"
license = "MIT"
name = "utsl-hybrid-clocks"
version = "0.1.0"
edition = "2018"

[dependencies]
thiserror = "1.0.9"
time = { version = "0.2.0", optional = true }

[features]
pretty-print = ["time"]

[dev-dependencies]
suppositions = "0.1.4"

[profile]

[profile.release]
debug = true
